# hostage-chess

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __main__.py
src/engine/: board.py  hostage.py  moves.py  result.py
src/server/: app.py  database.py  templates.py
static/css/: style.css
static/js/: game.js
tests/: test_board.py  test_database.py  test_hostage.py  test_moves.py  test_result.py
